<resources>
    <string name="app_name">Dash Tracker</string>
    <string name="btnRecordOrders">Record Order</string>
    <string name="btnShowOrders">Show Orders</string>
    <string name="btnSearchOrders">Search Menu</string>
    <string name="btnDeleteOrders">Delete Order</string>
    <string name="btnOptions">Options</string>
    <string name="main_menu">Main Menu</string>
    <string name="welcome_to_dash_tracker">Welcome To Dash Tracker!</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="pay">Pay</string>
    <string name="time_of_order">Time Of Order</string>
    <string name="day_of_week">Day Of Week</string>
    <string name="complete_time">Complete Time</string>
    <string name="miles_traveled">Miles Traveled</string>
    <string name="food_prep_performance">Food Prep Performance</string>
    <string name="show_orders">Show Orders</string>
    <string name="delete_order">Delete Order</string>
    <string name="submit">Submit</string>
    <string name="show_restaurant_name">Restaurant Name: </string>
    <string name="show_pay">Pay: </string>
    <string name="show_time_of_order">Time Of Order: </string>
    <string name="show_day_of_week">Day Of Week: </string>
    <string name="show_complete_time">Complete Time: </string>
    <string name="show_miles_traveled">Miles Traveled: </string>
    <string name="show_food_prep_performance">Food Prep Performance: </string>
    <string name="show_rating">Rating: </string>
    <string name="show_id">id</string>
    <string name="search_menu">Search Menu</string>
    <string name="most_orders">Most Orders</string>
    <string name="best_dasher_ratings">Best Dasher Ratings</string>
    <string name="most_money_earned">Most Money Earned</string>
    <string name="fastest_restaurants">Fastest Restaurants</string>
    <string name="best_hours">Best Hours</string>
    <string name="search_results">Search Results</string>
    <string name="search_value">Value</string>
    <string name="search_key">Key</string>
</resources>