<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:onClick="btnDeleteOrderCard"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/order_id_ref"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/show_id"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/linearLayout1"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout1" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_restaurant_name" />

        <TextView
            android:id="@+id/txtPay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_pay" />

        <TextView
            android:id="@+id/txtTimeOfOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_time_of_order" />

        <TextView
            android:id="@+id/txtDayOfWeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_day_of_week" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/linearLayout1"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtCompleteTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_complete_time" />

        <TextView
            android:id="@+id/txtMilesTraveled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_miles_traveled" />

        <TextView
            android:id="@+id/txtFoodPrepPerformance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_food_prep_performance" />

        <TextView
            android:id="@+id/txtRating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_rating" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="10dp"
        android:layout_marginVertical="5dp"
        android:background="@color/red_dark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>