<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/welcome_to_dash_tracker"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/main_menu"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtitle">

        <Button
            android:id="@+id/btnRecordOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="recordOrdersActivity"
            android:text="@string/btnRecordOrders"
            app:layout_constraintBottom_toTopOf="@+id/btnShowOrders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnShowOrders"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnShowOrders"
            app:layout_constraintBottom_toTopOf="@+id/btnSearchMenu"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnRecordOrder"
            android:textColor="@color/design_default_color_on_primary"
            android:onClick="showOrdersActivity"/>

        <Button
            android:id="@+id/btnSearchMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnSearchOrders"
            app:layout_constraintBottom_toTopOf="@+id/btnDeleteOrder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintTop_toBottomOf="@+id/btnShowOrders"
            android:onClick="searchOrdersActivity"/>

        <Button
            android:id="@+id/btnDeleteOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnDeleteOrders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/design_default_color_on_primary"
            app:layout_constraintTop_toBottomOf="@+id/btnSearchMenu"
            android:onClick="deleteOrderActivity"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>